--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,14 +16,21 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      - name: Set up uv with Python 3.14
-        uses: astral-sh/setup-uv@v3
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          version: "latest"
-          python-version: "3.14"
-      - name: Sync dependencies
-        run: uv sync
-      - name: Run Ruff
-        run: uv run ruff check
+          node-version: '20'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Run linter
+        run: npm run lint
+      
       - name: Run tests
-        run: uv run pytest
+        run: npm test
+      
+      - name: Build project
+        run: npm run build
