--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,55 @@
-/tmp/
-/.specstory/
-/.ruff_cache/
-/AGENTS.md
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Coverage
+coverage/
+.nyc_output/
+
+# Temporary files
 tmp/
-/.venv/
-/dist/
-/*.egg-info
-/build/
+temp/
+
+# Python artifacts (from original project)
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
+
+# Skills directory (user data)
+.skills/
+.skillz/
